# controllers/course.go
@@ -104,3 +104,46 @@ var GetKIKDDetails = func(w http.ResponseWriter, r *http.Request) {
 
 	u.Respond(w, models.GetKIKDDetail(courseID, competencyID))
 }
+
+// GetCourseBooks controller to get course books by competency and group id
+var GetCourseBooks = func(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	competencyID, err := strconv.Atoi(vars["competencyId"])
+	groupID, err := strconv.Atoi(vars["groupId"])
+
+	if err != nil {
+		log.WithFields(log.Fields{
+			"status": "Bad Request",
+			"error":  err,
+		}).Info("Fetch course books by competency and group id status")
+
+		resp := u.Message(http.StatusBadRequest, "")
+		resp["message"] = "Request param is not valid"
+
+		u.Respond(w, resp)
+		return
+	}
+
+	u.Respond(w, models.GetCourseBooks(competencyID, groupID))
+}
+
+// GetCourses controller to get courses by competency
+var GetCourses = func(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	competencyID, err := strconv.Atoi(vars["competencyId"])
+
+	if err != nil {
+		log.WithFields(log.Fields{
+			"status": "Bad Request",
+			"error":  err,
+		}).Info("Fetch course by competency id status")
+
+		resp := u.Message(http.StatusBadRequest, "")
+		resp["message"] = "Request param is not valid"
+
+		u.Respond(w, resp)
+		return
+	}
+
+	u.Respond(w, models.GetCourses(competencyID))
+}
