# swagger/service.go
@@ -132,7 +132,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/schoolResp"
 
-// swagger:operation GET /expertiseFields expertiseFields listExpertiseFields
+// swagger:operation GET /expertiseFields expertises listExpertiseFields
 // ---
 // summary: Return list of expertise fields.
 // description: Get the expertise field entities.
@@ -146,7 +146,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/expertiseFieldResp"
 
-// swagger:operation GET /expertiseFields/curriculumStructure expertiseFields listCurriculumStructure
+// swagger:operation GET /expertiseFields/curriculumStructure expertises listCurriculumStructure
 // ---
 // summary: Return list of curriculum structure.
 // description: Get the curriculum structure field entities.
@@ -160,7 +160,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/curriculumStructureResp"
 
-// swagger:operation GET /expertisePrograms expertisePrograms listExpertisePrograms
+// swagger:operation GET /expertisePrograms expertises listExpertisePrograms
 // ---
 // summary: Return list of expertise programs.
 // description: Get the expertise program entities.
@@ -174,7 +174,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/expertiseProgramsResp"
 
-// swagger:operation GET /expertisePrograms/with/expertiseField/{fieldId} expertisePrograms getExpertiseProgramsByFieldId
+// swagger:operation GET /expertisePrograms/with/expertiseField/{fieldId} expertises getExpertiseProgramsByFieldId
 // ---
 // summary: Return expertise program by field id
 // description: Get the expertise program entity by field id.
@@ -194,7 +194,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/expertiseProgramsResp"
 
-// swagger:operation GET /expertiseCompetencies expertiseCompetencies listExpertisePrograms
+// swagger:operation GET /expertiseCompetencies expertises listExpertisePrograms
 // ---
 // summary: Return list of expertise competencies.
 // description: Get the expertise competency entities.
@@ -208,7 +208,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/expertiseCompetenciesResp"
 
-// swagger:operation GET /expertiseCompetencies/with/expertiseProgram/{programId} expertiseCompetencies getExpertiseProgramsByFieldId
+// swagger:operation GET /expertiseCompetencies/with/expertiseProgram/{programId} expertises getExpertiseProgramsByFieldId
 // ---
 // summary: Return expertise competencies by program id
 // description: Get the expertise competencies entity by program id.
@@ -228,7 +228,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/expertiseCompetenciesResp"
 
-// swagger:operation GET /course/duration/with/competency/{competencyId}/group/{groupId} course getCourseDurations
+// swagger:operation GET /course/duration/with/competency/{competencyId}/group/{groupId} courses getCourseDurations
 // ---
 // summary: Return course duration by Competency and Group id
 // description: Get the course duration entity by Competency and Group id.
@@ -253,7 +253,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/courseDurationResp"
 
-// swagger:operation GET /course/allocation/with/competency/{competencyId}/group/{groupId} course getCourseAllocations
+// swagger:operation GET /course/allocation/with/competency/{competencyId}/group/{groupId} courses getCourseAllocations
 // ---
 // summary: Return course allocation by Competency and Group id
 // description: Get the course allocation entity by Competency and Group id.
@@ -278,7 +278,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/courseAllocationResp"
 
-// swagger:operation GET /course/kikd/with/competency/{competencyId}/group/{groupId} course getCourseKIKD
+// swagger:operation GET /course/kikd/with/competency/{competencyId}/group/{groupId} courses getCourseKIKD
 // ---
 // summary: Return course KI and KD by Competency and Group id
 // description: Get the course KI and KD entity by Competency and Group id.
@@ -303,7 +303,7 @@ package swagger
 //   "500":
 //     "$ref": "#/responses/courseKIKDResp"
 
-// swagger:operation GET /course/kikd/detail/with/competency/{competencyId}/course/{courseId} course getKIKDDetail
+// swagger:operation GET /course/kikd/detail/with/competency/{competencyId}/course/{courseId} courses getKIKDDetail
 // ---
 // summary: Return KI and KD detail by Competency and Course id
 // description: Get the KI and KD detail entity by Competency and Course id.
@@ -327,3 +327,48 @@ package swagger
 //     "$ref": "#/responses/notFound"
 //   "500":
 //     "$ref": "#/responses/KIKDDetailResp"
+
+// swagger:operation GET /course/book/with/competency/{competencyId}/group/{groupId} courses getCourseBooks
+// ---
+// summary: Return course book by Competency and Group id
+// description: Get the course book entity by Competency and Group id.
+// parameters:
+// - name: competencyId
+//   in: path
+//   description: ID of the competency
+//   type: integer
+//   required: true
+// - name: groupId
+//   in: path
+//   description: ID of the group
+//   type: integer
+//   required: true
+// responses:
+//   "200":
+//     "$ref": "#/responses/courseBookResp"
+//   "400":
+//     "$ref": "#/responses/badReq"
+//   "404":
+//     "$ref": "#/responses/notFound"
+//   "500":
+//     "$ref": "#/responses/courseBookResp"
+
+// swagger:operation GET /course/with/competency/{competencyId} courses getCourses
+// ---
+// summary: Return course by Competency id
+// description: Get the course entity by Competency id.
+// parameters:
+// - name: competencyId
+//   in: path
+//   description: ID of the competency
+//   type: integer
+//   required: true
+// responses:
+//   "200":
+//     "$ref": "#/responses/courseResp"
+//   "400":
+//     "$ref": "#/responses/badReq"
+//   "404":
+//     "$ref": "#/responses/notFound"
+//   "500":
+//     "$ref": "#/responses/courseResp"
